--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <title data-i18n="page_title"></title>
 
   <!-- Подключаем общий CSS -->
-  <link rel="stylesheet" href="../common.css">
+  <link rel="stylesheet" href="common.css">
   <link rel="stylesheet" href="style.css">
 
   <!-- Скрипт перевода -->
-  <script src="../lang.js" defer></script>
+  <script src="lang.js" defer></script>
 </head>
 <body>
 
