--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title data-i18n="page_title"></title>
+  <title data-i18n="Chefportal"></title>
 
   <!-- Подключаем общий CSS -->
   <link rel="stylesheet" href="common.css">
@@ -15,7 +14,7 @@
 </head>
 <body>
 
- <header class="page-header">
+  <header class="page-header">
     <div class="lang-switch">
       <button class="lang-btn" data-lang="ru">RU</button>
       <button class="lang-btn" data-lang="en">EN</button>
@@ -27,27 +26,22 @@
     </div>
   </header>
 
- <main class="main-container">
-  
+  <main class="main-container">
 
     <div class="date-container">
       <span data-i18n="date"></span>: <span id="current-date"></span>
-    </div
- 
-  
-  <!-- Заголовок -->
-  <h1 data-i18n="Chefportal">Портал шефа</h1>
-
-  <!-- Кнопки перехода -->
-  <div class="buttons-container">
-    <button class="nav-btn" data-i18n="checklist1" onclick="location.href='todolist /index.html'">чеклист</button>
-    <button class="nav-btn" data-i18n="ЗП" onclick="location.href='acc /index.html'">ЗП</button>
-
-  
     </div>
-</main>
-
-
   
+    <!-- Заголовок -->
+    <h1 data-i18n="Chefportal">Портал шефа</h1>
+
+    <!-- Кнопки перехода -->
+    <div class="buttons-container">
+      <button class="nav-btn" onclick="location.href='todolist/index.html'" data-i18n="checklist1"></button>
+      <button class="nav-btn" onclick="location.href='acc/index.html'" data-i18n="salary"></button>
+    </div>
+
+  </main>
+
 </body>
 </html>
