--- a/acc/index.html
+++ b/acc/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Зарплатный портал</title>
+  <title data-i18n="salary_title">Зарплатный портал</title>
 
   <link rel="stylesheet" href="../common.css">
   <link rel="stylesheet" href="style.css">
 
   <script src="../sendConfig.js" defer></script>
+  <script src="../lang.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
-
   <header class="page-header">
     <div class="lang-switch">
       <button class="lang-btn" data-lang="ru">RU</button>
@@ -19,13 +20,13 @@
       <button class="lang-btn" data-lang="vi">VI</button>
     </div>
     <div class="nav-buttons">
-      <button class="nav-btn" onclick="location.href='http://stasssercheff.github.io/shbb/'">HOME</button>
-      <button class="nav-btn" onclick="location.href='../index.html'">BACK</button>
+      <button class="nav-btn" onclick="location.href='http://stasssercheff.github.io/shbb/'" data-i18n="home"></button>
+      <button class="nav-btn" onclick="location.href='../index.html'" data-i18n="back"></button>
     </div>
   </header>
 
   <div class="date-container">
-    Дата: <span id="current-date"></span>
+    <span data-i18n="date"></span>: <span id="current-date"></span>
   </div>
 
   <div class="table-container">
@@ -35,18 +36,16 @@
   </div>
 
   <div class="controls">
-    <label for="periodSelect">Период:</label>
+    <label for="periodSelect" data-i18n="period"></label>
     <select id="periodSelect">
       <option value="1-15">01-15</option>
       <option value="16-end">16-конец месяца</option>
     </select>
-    <button id="generateBtn">Сформировать ЗП</button>
-    <button id="downloadImageBtn">Скачать PNG</button>
-    <button id="sendSalaryToTelegram">Отправить</button>
+    <button id="generateBtn" data-i18n="generate_salary"></button>
+    <button id="downloadImageBtn" data-i18n="download_png"></button>
+    <button id="sendSalaryToTelegram" data-i18n="send"></button>
   </div>
 
   <div id="salarySummary" class="salary-summary"></div>
-
-  <script src="script.js" defer></script>
 </body>
 </html>
