--- a/acc/index.html
+++ b/acc/index.html
@@ -35,12 +35,31 @@
     </table>
   </div>
 
+  <!-- Блок выбора периода -->
   <div class="controls">
-    <label for="periodSelect" data-i18n="period"></label>
-    <select id="periodSelect">
-      <option value="1-15">01-15</option>
-      <option value="16-end">16-конец месяца</option>
-    </select>
+    <div class="period-select-wrapper">
+      <label for="monthSelect">Период расчета:</label>
+      <select id="monthSelect">
+        <option value="0">Январь</option>
+        <option value="1">Февраль</option>
+        <option value="2">Март</option>
+        <option value="3">Апрель</option>
+        <option value="4">Май</option>
+        <option value="5">Июнь</option>
+        <option value="6">Июль</option>
+        <option value="7">Август</option>
+        <option value="8">Сентябрь</option>
+        <option value="9">Октябрь</option>
+        <option value="10">Ноябрь</option>
+        <option value="11">Декабрь</option>
+      </select>
+
+      <select id="halfSelect">
+        <option value="1">1 половина (01–15)</option>
+        <option value="2">2 половина (16–конец)</option>
+      </select>
+    </div>
+
     <button id="generateBtn" data-i18n="generate_salary"></button>
     <button id="downloadImageBtn" data-i18n="download_png"></button>
     <button id="sendSalaryToTelegram" data-i18n="send"></button>
