--- a/acc/index.html
+++ b/acc/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <button id="generateBtn" data-i18n="generate_salary"></button>
-    <button id="downloadImageBtn" data-i18n="download_png"></button>
+    <button id="downloadImageBtn" data-i18n="schedule"></button>
     <button id="sendSalaryToTelegram" data-i18n="send"></button>
   </div>
 
