--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button class="lang-btn" data-lang="vi">VI</button>
     </div>
     <div class="nav-buttons">
-      <button class="nav-btn" onclick="location.href='http://stasssercheff.github.io/shbb/index.html'" data-i18n="home"></button>
+      <button class="nav-btn" onclick="location.href='http://stasssercheff.github.io/shbb/index.html'" data-i18n="greeting"></button>
     </div>
   </header>
 
