--- a/acc/index.html
+++ b/acc/index.html
@@ -20,7 +20,7 @@
       <button class="lang-btn" data-lang="vi">VI</button>
     </div>
     <div class="nav-buttons">
-      <button class="nav-btn" onclick="location.href='http://stasssercheff.github.io/sbb/'" data-i18n="home"></button>
+      <button class="nav-btn" onclick="location.href='http://stasssercheff.github.io/shbb/'" data-i18n="home"></button>
       <button class="nav-btn" onclick="location.href='../index.html'" data-i18n="back"></button>
     </div>
   </header>
@@ -66,5 +66,8 @@
   </div>
 
   <div id="salarySummary" class="salary-summary"></div>
+
+  <!-- html2canvas подключаем внизу -->
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </body>
 </html>
