--- a/todolist/index.html
+++ b/todolist/index.html
@@ -17,7 +17,7 @@
 
 
 </head>
-<body data-profile="kitchen">
+<body data-profile="chef">
 
 <header class="page-header">
   <div class="lang-switch">
