--- a/acc/index.html
+++ b/acc/index.html
@@ -12,7 +12,9 @@
   <script src="../lang.js" defer></script>
   <script src="script.js" defer></script>
 </head>
-<body>
+<body data-profile="chef">
+
+  
   <header class="page-header">
     <div class="lang-switch">
       <button class="lang-btn" data-lang="ru">RU</button>
