--- a/acc/index.html
+++ b/acc/index.html
@@ -39,28 +39,38 @@
 
   <!-- Блок выбора периода -->
   <div class="controls">
-    <div class="period-select-wrapper">
-      <label for="monthSelect">Период расчета:</label>
-      <select id="monthSelect">
-        <option value="0">Январь</option>
-        <option value="1">Февраль</option>
-        <option value="2">Март</option>
-        <option value="3">Апрель</option>
-        <option value="4">Май</option>
-        <option value="5">Июнь</option>
-        <option value="6">Июль</option>
-        <option value="7">Август</option>
-        <option value="8">Сентябрь</option>
-        <option value="9">Октябрь</option>
-        <option value="10">Ноябрь</option>
-        <option value="11">Декабрь</option>
-      </select>
+   <div class="period-select-wrapper">
+  <label for="yearSelect">Год:</label>
+  <select id="yearSelect">
+    <option value="2025">2025</option>
+    <option value="2024">2024</option>
+    <option value="2023">2023</option>
+    <option value="2022">2022</option>
+  </select>
 
-      <select id="halfSelect">
-        <option value="1">1 половина (01–15)</option>
-        <option value="2">2 половина (16–конец)</option>
-      </select>
-    </div>
+  <label for="monthSelect">Месяц:</label>
+  <select id="monthSelect">
+    <option value="0">Январь</option>
+    <option value="1">Февраль</option>
+    <option value="2">Март</option>
+    <option value="3">Апрель</option>
+    <option value="4">Май</option>
+    <option value="5">Июнь</option>
+    <option value="6">Июль</option>
+    <option value="7">Август</option>
+    <option value="8">Сентябрь</option>
+    <option value="9">Октябрь</option>
+    <option value="10">Ноябрь</option>
+    <option value="11">Декабрь</option>
+  </select>
+
+  <label for="halfSelect">Период:</label>
+  <select id="halfSelect">
+    <option value="1">1-15</option>
+    <option value="2">16-31 половина</option>
+  </select>
+</div>
+
 
     <button id="generateBtn" data-i18n="generate_salary"></button>
     <button id="downloadImageBtn" data-i18n="schedule"></button>
