--- a/acc/index.html
+++ b/acc/index.html
@@ -48,7 +48,7 @@
     <option value="2022">2022</option>
   </select>
 
-  <label for="monthSelect">Месяц:</label>
+  <label for="monthSelect">Мес.:</label>
   <select id="monthSelect">
     <option value="0">Январь</option>
     <option value="1">Февраль</option>
@@ -67,7 +67,7 @@
   <label for="halfSelect">Период:</label>
   <select id="halfSelect">
     <option value="1">1-15</option>
-    <option value="2">16-31 половина</option>
+    <option value="2">16-31</option>
   </select>
 </div>
 
