--- a/acc/index.html
+++ b/acc/index.html
@@ -71,10 +71,11 @@
   </select>
 </div>
 
-
     <button id="generateBtn" data-i18n="generate_salary"></button>
     <button id="downloadImageBtn" data-i18n="schedule"></button>
+    <button id="sendScheduleBtn">Отправить график</button>
     <button id="sendSalaryToTelegram" data-i18n="send"></button>
+
   </div>
 
   <div id="salarySummary" class="salary-summary"></div>
