--- a/acc/index.html
+++ b/acc/index.html
@@ -14,6 +14,15 @@
 </head>
 <body data-profile="chef">
 
+  <!-- Блок проверки доступа -->
+<script>
+  const accessCode = "32123"; // задаёшь свой код
+  const userInput = prompt("Введите код доступа к странице:");
+  if (userInput !== accessCode) {
+    alert("Неверный код! Доступ запрещён.");
+    window.location.href = "http://stasssercheff.github.io/shbb/"; // редирект на главную
+  }
+</script>
   
   <header class="page-header">
     <div class="lang-switch">
