--- a/acc/index.html
+++ b/acc/index.html
@@ -57,7 +57,7 @@
     <option value="2022">2022</option>
   </select>
 
-  <label for="monthSelect">Мес.:</label>
+  <label for="monthSelect">Месяц:</label>
   <select id="monthSelect">
     <option value="0">Январь</option>
     <option value="1">Февраль</option>
@@ -73,7 +73,7 @@
     <option value="11">Декабрь</option>
   </select>
 
-  <label for="halfSelect">Период:</label>
+  <label for="halfSelect">Расчетный период:</label>
   <select id="halfSelect">
     <option value="1">1-15</option>
     <option value="2">16-31</option>
