--- a/acc/index.html
+++ b/acc/index.html
@@ -36,9 +36,12 @@
     </div>
   </header>
 
-  <div class="date-container">
+ <div class="date-container">
+  <div class="date-wrapper">
     <span data-i18n="date"></span>: <span id="current-date"></span>
   </div>
+</div>
+
 
   <div class="table-container">
     <table id="schedule">
