--- a/acc/index.html
+++ b/acc/index.html
@@ -52,6 +52,7 @@
   <!-- Блок выбора периода -->
   <div class="controls">
    <div class="period-select-wrapper">
+  <div class="period-row">
   <label for="yearSelect">Год:</label>
   <select id="yearSelect">
     <option value="2025">2025</option>
@@ -60,6 +61,7 @@
     <option value="2022">2022</option>
   </select>
 
+  <div class="period-row">
   <label for="monthSelect">Месяц:</label>
   <select id="monthSelect">
     <option value="0">Январь</option>
@@ -76,6 +78,7 @@
     <option value="11">Декабрь</option>
   </select>
 
+  <div class="period-row">
   <label for="halfSelect">Расчетный период:</label>
   <select id="halfSelect">
     <option value="1">1-15</option>
