--- a/acc/index.html
+++ b/acc/index.html
@@ -76,7 +76,7 @@
     <option value="11">Декабрь</option>
   </select>
 
-  <label for="halfSelect">Расчетный период:</label>
+  <label for="halfSelect">Период:</label>
   <select id="halfSelect">
     <option value="1">1-15</option>
     <option value="2">16-31</option>
