--- a/todolist/index.html
+++ b/todolist/index.html
@@ -153,12 +153,16 @@
     <input type="checkbox" id="bisque">
   </div>
   <div class="checklist-item">
-    <label for="stuffed_vegetables" data-i18n="stuffed_vegetables"></label>
-    <input type="checkbox" id="stuffed_vegetables">
+    <label for="vegetables_staff" data-i18n="vegetables_staff"></label>
+    <input type="checkbox" id="vegetables_staff">
   </div>
   <div class="checklist-item">
     <label for="beans" data-i18n="beans"></label>
     <input type="checkbox" id="beans">
+  </div>
+    <div class="checklist-item">
+    <label for="ham" data-i18n="ham"></label>
+    <input type="checkbox" id="ham">
   </div>
   <div class="checklist-item">
     <label for="poached_eggs" data-i18n="poached_eggs"></label>
@@ -169,8 +173,8 @@
     <input type="checkbox" id="pancake_batter">
   </div>
   <div class="checklist-item">
-    <label for="stuffed_pork" data-i18n="stuffed_pork"></label>
-    <input type="checkbox" id="stuffed_pork">
+    <label for="pork_sous_vide_staff" data-i18n="pork_sous_vide_staff"></label>
+    <input type="checkbox" id="pork_sous_vide_staff">
   </div>
   <div class="checklist-item">
     <label for="pasta" data-i18n="pasta"></label>
