--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <div class="buttons-container">
       <button class="nav-btn" onclick="location.href='todolist/index.html'" data-i18n="checklist1"></button>
       <button class="nav-btn" onclick="location.href='acc/index.html'" data-i18n="salary"></button>
+      <button class="nav-btn" onclick="location.href='food_staf/index.html'" data-i18n="food_staf"></button>
+
+      
     </div>
 
   </main>
