--- a/food_staf/index.html
+++ b/food_staf/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title data-i18n="weekly_checklist"></title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title data-i18n="weekly_checklist">Еженедельный чеклист</title>
 
-  <!-- Общий CSS -->
-  <link rel="stylesheet" href="../common.css">
-  <!-- Локальный CSS -->
-  <link rel="stylesheet" href="style.css">
+  <!-- Общие стили -->
+  <link rel="stylesheet" href="../common.css" />
+  <link rel="stylesheet" href="style.css" />
 
   <!-- Скрипты -->
   <script src="../sendConfig.js" defer></script>
@@ -47,7 +46,7 @@
 
     <div class="dish">
       <label data-i18n="comment"></label>
-      <textarea id="comment" class="comment" rows="3" placeholder=""></textarea>
+      <textarea id="comment" class="comment" rows="3"></textarea>
     </div>
 
     <button id="sendBtn" data-i18n="send"></button>
