--- a/food_staf/index.html
+++ b/food_staf/index.html
@@ -12,7 +12,7 @@
   <!-- Скрипты -->
   <script src="../sendConfig.js" defer></script>
   <script src="../lang.js" defer></script>
-  <script src="checklist.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body data-profile="kitchen">
   <header class="page-header">
