--- a/food_staf/index.html
+++ b/food_staf/index.html
@@ -29,15 +29,9 @@
   </header>
 
   <main class="main-container">
-    <div class="date-container">
-      <span data-i18n="sending_date"></span>:
-      <span id="current-date"></span>
-    </div>
-
-    <h1 data-i18n="weekly_checklist"></h1>
 
     <div id="date-selectors" class="dish">
-      <label data-i18n="select_start_date"></label>
+      <label data-i18n="select_start_date">Начало периода</label>
       <select id="daySelect" class="qty"></select>
       <select id="monthSelect" class="qty"></select>
     </div>
@@ -45,11 +39,11 @@
     <div id="week-container"></div>
 
     <div class="dish">
-      <label data-i18n="comment"></label>
+      <label data-i18n="comment">Комментарий</label>
       <textarea id="comment" class="comment" rows="3"></textarea>
     </div>
 
-    <button id="sendBtn" data-i18n="send"></button>
+    <button id="sendBtn" data-i18n="send">Отправить</button>
   </main>
 </body>
 </html>
