--- a/food_staf/index.html
+++ b/food_staf/index.html
@@ -5,11 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title data-i18n="weekly_checklist">Еженедельный чеклист</title>
 
-  <!-- Общие стили -->
   <link rel="stylesheet" href="../common.css" />
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Скрипты -->
   <script src="../sendConfig.js" defer></script>
   <script src="../lang.js" defer></script>
   <script src="script.js" defer></script>
@@ -29,7 +27,6 @@
   </header>
 
   <main class="main-container">
-
     <div id="date-selectors" class="dish">
       <label data-i18n="select_start_date">Начало периода</label>
       <select id="daySelect" class="qty"></select>
@@ -43,7 +40,7 @@
       <textarea id="comment" class="comment" rows="3"></textarea>
     </div>
 
-    <button id="sendBtn" data-i18n="send">Отправить</button>
+    <button id="sendBtn" data-i18n="send"></button>
   </main>
 </body>
 </html>
