--- a/acc/index.html
+++ b/acc/index.html
@@ -20,7 +20,7 @@
   const userInput = prompt("Введите код доступа к странице:");
   if (userInput !== accessCode) {
     alert("Неверный код! Доступ запрещён.");
-    window.location.href = "http://stasssercheff.github.io/shbb/"; // редирект на главную
+    window.location.href = "http://stasssercheff.github.io/shbb25/"; // редирект на главную
   }
 </script>
   
@@ -31,7 +31,7 @@
       <button class="lang-btn" data-lang="vi">VI</button>
     </div>
     <div class="nav-buttons">
-      <button class="nav-btn" onclick="location.href='http://stasssercheff.github.io/shbb/'" data-i18n="home"></button>
+      <button class="nav-btn" onclick="location.href='http://stasssercheff.github.io/shbb25/'" data-i18n="home"></button>
       <button class="nav-btn" onclick="location.href='../index.html'" data-i18n="back"></button>
     </div>
   </header>
