--- a/acc/index.html
+++ b/acc/index.html
@@ -20,7 +20,7 @@
   const userInput = prompt("Введите код доступа к странице:");
   if (userInput !== accessCode) {
     alert("Неверный код! Доступ запрещён.");
-    window.location.href = "http://stasssercheff.github.io/shbb25/"; // редирект на главную
+    window.location.href = "http://stasssercheff.github.io/sbb/"; // редирект на главную
   }
 </script>
   
